# IMC

./: CMakeLists.txt  main.cpp
include/: Game.hpp
source/: main.cpp
test/: unit_tests.cpp
